--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.env
 /public/bundles/
 /var/
 /vendor/
@@ -16,3 +17,6 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+
+/.idea/*
