--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,6 +6,10 @@ vich_uploader:
             uri_prefix: /images/products
             upload_destination: '%kernel.project_dir%/public/images/products'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
+        profile_image:
+            uri_prefix: /images/profiles
+            upload_destination: '%kernel.project_dir%/public/images/profiles'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
 
     #mappings:
     #    products:
