--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ public/media
 /public/media/cache/
 ###< liip/imagine-bundle ###
 
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
