--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
 
             logout:
                 path: security_logout
-                target: product
+                target: index_default
 
 
             # activate different ways to authenticate
