--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -2,11 +2,11 @@
 liip_imagine:
     filter_sets:
         # the name of the "filter set"
-        my_thumb :
+        product_thumb :
             # adjust the image quality to 75%
             quality : 75
             filters :
                 thumbnail  :
-                    size : [360, 230]
+                    size : [261, 261]
                     mode : outbound
 
