--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,9 @@ security:
                 path: security_logout
                 target: index_default
 
+             # Allow super admin to switch user
+            switch_user: true
+
 
             # activate different ways to authenticate
 
@@ -36,6 +39,10 @@ security:
 
             # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
