--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,8 @@ security:
                 login_path: security_login
                 check_path: security_login
 
+            user_checker: App\EventListener\UserChecker
+
             logout:
                 path: security_logout
                 target: index_default
