--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:root@127.0.0.1:8889/erp
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=gmail://yassir.chakiri12@gmail.com:alahoakbar,1996@localhost
 ###< symfony/swiftmailer-bundle ###
