--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,6 +50,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, allow_if: "!is_fully_authenticated()" }
+        - { path: ^/inscription, allow_if: "!is_fully_authenticated()" }
         - { path: ^/, roles: ROLE_USER }
