--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "dompdf/dompdf": "^0.8.3",
         "fzaninotto/faker": "^1.8",
+        "gos/web-socket-bundle": "^1.8",
         "knplabs/knp-paginator-bundle": "^3.0",
         "liip/imagine-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
