--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beberlei/doctrineextensions": "^1.2",
         "dompdf/dompdf": "^0.8.3",
         "fzaninotto/faker": "^1.8",
         "gos/web-socket-bundle": "^1.8",
