acces control forgotPassword

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -56,4 +56,6 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/login, allow_if: "!is_authenticated()" }
         - { path: ^/inscription, allow_if: "!is_authenticated()" }
+        - { path: ^/forgottenPassword, allow_if: "!is_authenticated()" }
+        - { path: ^/resetPassword, allow_if: "!is_authenticated()" }
         - { path: ^/, roles: ROLE_USER }
